--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
     }
 
     .zone {
-        margin-top:-50px;
+        margin-top: -50px;
         display: flex;
         justify-content: space-around;
 
@@ -29,5 +29,12 @@ body {
             color: black;
             font-size: 80px;
         }
+    }
+
+    button {
+        background-color: darkslategrey;
+        border-radius: 10px;
+        color: white;
+        font-size: 24px;
     }
 }
